objects/Enrollment_Request__c.object
<CustomObject><fields>
        <fullName>Batch_ID__c</fullName>
        <inlineHelpText>Identifier used to group enrollment requests together for purposes of creating summary email notifications once all requests have been processed</inlineHelpText>
        <label>Batch ID</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Class_Format__c</fullName>
        <description>Current use case is Self-Paced only but adding additional options for future expansion</description>
        <inlineHelpText>Format of the Class this Enrollment Request is for -  combined with the Course Code and Language to identify the specific Class to enroll in</inlineHelpText>
        <label>Class Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Self-Paced</fullName>
                </value>
                <value>
                    <fullName>Distance Learning</fullName>
                </value>
                <value>
                    <fullName>Instructor Led</fullName>
                </value>
                <value>
                    <fullName>Exam</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Class to enroll Contact in</inlineHelpText>
        <label>Class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Enrollment Requests</relationshipLabel>
        <relationshipName>Enrollment_Requests</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Contact to be enrolled</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Enrollment Requests</relationshipLabel>
        <relationshipName>Enrollment_Requests</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Course_Code__c</fullName>
        <description>Not a direct lookup to Course object so requests can be made via the Code rather than requiring the Salesforce ID of the Course</description>
        <inlineHelpText>Code used to identify the Course the Enrollment Code is being made for - this code plus the Language and Format will identify the specific Class to enroll in</inlineHelpText>
        <label>Course Code</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Email__c</fullName>
        <inlineHelpText>Email Address of the Enrollee - used to find the Contact in Salesforce or CDS if the Contact is not identified explicitly</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>Enrollment_Code__c</fullName>
        <description>This is not a direct lookup to the Enrollment Code object so it can support querying for records by the Code itself rather than requiring the Salesforce ID of the Code.</description>
        <inlineHelpText>Code used to identify the Enterprise Training Agreement the Enrollment Request should be made for</inlineHelpText>
        <label>Enrollment Code</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Enrollment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Resulting Enrollment record from this Enrollment Request - should be set after email notification is sent</inlineHelpText>
        <label>Enrollment</label>
        <referenceTo>Enrollment__c</referenceTo>
        <relationshipLabel>Enrollment Requests</relationshipLabel>
        <relationshipName>Enrollment_Requests</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Enterprise_Training_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Training agreement the Enrollment should be created under</inlineHelpText>
        <label>Enterprise Training Agreement</label>
        <referenceTo>Enterprise_Training_Agreement__c</referenceTo>
        <relationshipLabel>Enrollment Requests</relationshipLabel>
        <relationshipName>Enrollment_Requests</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Exception_Reason__c</fullName>
        <inlineHelpText>Details if an exception occurred during processing</inlineHelpText>
        <label>Exception Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>First_Name__c</fullName>
        <inlineHelpText>First Name of the Enrollee</inlineHelpText>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Language_Code__c</fullName>
        <inlineHelpText>ISO Code of the Language the Enrollment Request is for - used to identify the correct Class when combined with the Course Code and Format</inlineHelpText>
        <label>Language Code</label>
        <length>3</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Language_ISO_Code__c</fullName>
        <formula>Enterprise_Training_Agreement__r.Language__r.ISO_Code__c</formula>
        <label>Language ISO Code</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Last_Name__c</fullName>
        <inlineHelpText>Last Name of the Enrollee</inlineHelpText>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Source__c</fullName>
        <inlineHelpText>How did this Enrollment Request get added to the queue?</inlineHelpText>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bulk Enrollment</fullName>
                </value>
                <value>
                    <fullName>Manual Enrollment</fullName>
                </value>
                <value>
                    <fullName>Self-Enrollment Portal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Pending Notification</fullName>
                </value>
                <value>
                    <fullName>Process Manually</fullName>
                </value>
                <value>
                    <fullName>No Action Planned</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
                <value>
                    <fullName>Reprocess</fullName>
                </value>
                <value>
                    <fullName>Pending CDS Lookup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Staging object to ingest requests for class enrollment under Enterprise Training Agreements from multiple sources including manual internal enrollments, self-enrollments via a portal and bulk enrollments via a file load. Records that are processed through this object will ultimately result in records being created in the Enrollment object.</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Private</externalSharingModel><label>Enrollment Request</label><nameField>
        <displayFormat>ER-{0}</displayFormat>
        <label>Enrollment Request ID</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Enrollment Requests</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All_Requests</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Email__c</columns>
        <columns>Contact__c</columns>
        <columns>Enterprise_Training_Agreement__c</columns>
        <columns>Course_Code__c</columns>
        <columns>Class_Format__c</columns>
        <columns>Language_Code__c</columns>
        <columns>Class__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Enrollment__c</columns>
        <columns>Exception_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Requests</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>Completed_Requests</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Contact__c</columns>
        <columns>Enrollment_Code__c</columns>
        <columns>Enterprise_Training_Agreement__c</columns>
        <columns>Course_Code__c</columns>
        <columns>Class_Format__c</columns>
        <columns>Language_Code__c</columns>
        <columns>Class__c</columns>
        <columns>Status__c</columns>
        <columns>Source__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Completed Requests</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>Exceptions</fullName>
        <columns>Batch_ID__c</columns>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Enterprise_Training_Agreement__c</columns>
        <columns>Status__c</columns>
        <columns>Exception_Reason__c</columns>
        <columns>Class__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Exception</value>
        </filters>
        <label>Exceptions</label>
    </listViews><listViews>
        <fullName>InProgress_Requests</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Contact__c</columns>
        <columns>Enrollment_Code__c</columns>
        <columns>Enterprise_Training_Agreement__c</columns>
        <columns>Course_Code__c</columns>
        <columns>Class_Format__c</columns>
        <columns>Language_Code__c</columns>
        <columns>Class__c</columns>
        <columns>Status__c</columns>
        <columns>Source__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Processing,Pending Notification</value>
        </filters>
        <label>In Progress Requests</label>
        <language>en_US</language>
    </listViews></CustomObject>